--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://mkaliotis.github.io/PartnerWorskhop/'
 languageCode = 'en-us'
 title = 'Kentik Partner Workshop'
 
